--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "bootstrap": "^5.2.2",
         "eslint": "^8.26.0",
         "eslint-plugin-import": "^2.26.0",
+        "headroom.js": "^0.12.0",
         "jquery": "^3.6.1",
         "postcss-scss": "^4.0.5",
         "select2": "^4.1.0-rc.0",
